--- a/ri/Lemon/Reporters/Verbose/cdesc-Verbose.yaml
+++ b/ri/Lemon/Reporters/Verbose/cdesc-Verbose.yaml
@@ -10,6 +10,10 @@ comment:
   width: 
 - !ruby/struct:RDoc::Markup::Flow::P 
   body: Generic Reporter
+- !ruby/struct:RDoc::Markup::Flow::RULE 
+  width: 
+- !ruby/struct:RDoc::Markup::Flow::P 
+  body: Generic Reporter
 constants: []
 
 full_name: Lemon::Reporters::Verbose
