--- a/ri/Lemon/Reporter/cdesc-Reporter.yaml
+++ b/ri/Lemon/Reporter/cdesc-Reporter.yaml
@@ -14,6 +14,11 @@ comment:
 - !ruby/struct:RDoc::Markup::Flow::H 
   level: 1
   text: Reporter Base Class
+- !ruby/struct:RDoc::Markup::Flow::RULE 
+  width: 
+- !ruby/struct:RDoc::Markup::Flow::H 
+  level: 1
+  text: Reporter Base Class
 constants: []
 
 full_name: Lemon::Reporter
