--- a/ri/Lemon/Reporters/Outline/cdesc-Outline.yaml
+++ b/ri/Lemon/Reporters/Outline/cdesc-Outline.yaml
@@ -5,18 +5,18 @@ class_methods: []
 
 comment: 
 - !ruby/struct:RDoc::Markup::Flow::P 
-  body: Verbose Reporter
+  body: Outline Reporter
 - !ruby/struct:RDoc::Markup::Flow::RULE 
   width: 
 - !ruby/struct:RDoc::Markup::Flow::P 
-  body: Verbose Reporter
+  body: Outline Reporter
 - !ruby/struct:RDoc::Markup::Flow::RULE 
   width: 
 - !ruby/struct:RDoc::Markup::Flow::P 
-  body: Verbose Reporter
+  body: Outline Reporter
 constants: []
 
-full_name: Lemon::Reporters::Verbose
+full_name: Lemon::Reporters::Outline
 includes: []
 
 instance_methods: 
@@ -34,5 +34,5 @@ instance_methods:
   name: report_start
 - !ruby/object:RDoc::RI::MethodSummary 
   name: report_success
-name: Verbose
+name: Outline
 superclass: Reporter
