--- a/.config/cucumber.yml
+++ b/.config/cucumber.yml
@@ -1,3 +1,3 @@
-default: test/cli
-profile: --format profile test/cli
-log: --format progress --format html --out=log/cucumber/index.html test/cli
+default: features
+profile: --format profile features
+log: --format progress --format html --out=log/cucumber/index.html features
